--- a/FinanceMicroservice/FinanceMicroservice.Infastructure/FinanceMicroservice.Infastructure.csproj
+++ b/FinanceMicroservice/FinanceMicroservice.Infastructure/FinanceMicroservice.Infastructure.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
 	<ProjectReference Include="..\FinanceMicroservice.Core\FinanceMicroservice.Core.csproj" />
+	<PackageReference Include="EntityFramework" Version="6.4.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.5">
