--- a/FinanceMicroservice/FinanceMicroservice.Services/FinanceMicroservice.Application.csproj
+++ b/FinanceMicroservice/FinanceMicroservice.Services/FinanceMicroservice.Application.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\FinanceMicroservice.Core\FinanceMicroservice.Domain.csproj" />
   </ItemGroup>
 
