--- a/FinanceMicroservice/FinanceMicroservice.Infastructure/FinanceMicroservice.Infastructure.csproj
+++ b/FinanceMicroservice/FinanceMicroservice.Infastructure/FinanceMicroservice.Infastructure.csproj
@@ -13,6 +13,8 @@
   <ItemGroup>
 	<ProjectReference Include="..\FinanceMicroservice.Core\FinanceMicroservice.Domain.csproj" />
 	<ProjectReference Include="..\FinanceMicroservice.Services\FinanceMicroservice.Application.csproj" />
+	<PackageReference Include="AutoMapper" Version="12.0.1" />
+	<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
 	<PackageReference Include="EntityFramework" Version="6.4.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.5" />
