Update: Added model classes to FinanceService.Domain

--- a/FinanceService/FinanceService.API/FinanceService.API.csproj
+++ b/FinanceService/FinanceService.API/FinanceService.API.csproj
@@ -12,4 +12,9 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\FinanceService.Application\FinanceService.Application.csproj" />
+    <ProjectReference Include="..\Infastructure\FinanceService.Infastructure.csproj" />
+  </ItemGroup>
+
 </Project>
