Added interfaces to application library and created DTO classes

--- a/FinanceService/FinanceService.Application/FinanceService.Application.csproj
+++ b/FinanceService/FinanceService.Application/FinanceService.Application.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\FinanceService.Domain\FinanceService.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
