--- a/FinanceService/FinanceService.Application/FinanceService.Application.csproj
+++ b/FinanceService/FinanceService.Application/FinanceService.Application.csproj
@@ -14,4 +14,8 @@
     <Folder Include="Services\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+  </ItemGroup>
+
 </Project>
