--- a/FinanceService/Infastructure/FinanceService.Infastructure.csproj
+++ b/FinanceService/Infastructure/FinanceService.Infastructure.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\FinanceService.Application\FinanceService.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
+  </ItemGroup>
+
 </Project>
