--- a/FinanceService/FinanceService.API/FinanceService.API.csproj
+++ b/FinanceService/FinanceService.API/FinanceService.API.csproj
@@ -22,4 +22,16 @@
     <ProjectReference Include="..\FinanceService.Infastructure\FinanceService.Infastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="..\.dockerignore" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="..\.dockerignore" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="..\.dockerignore" />
+  </ItemGroup>
+
 </Project>
