--- a/FinanceService/src/FinanceService.Infastructure/FinanceService.Infastructure.csproj
+++ b/FinanceService/src/FinanceService.Infastructure/FinanceService.Infastructure.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -16,11 +16,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\FinanceService.Domain\FinanceService.Domain.csproj" />
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Migrations\" />
+    <ProjectReference Include="..\FinanceService.Application\FinanceService.Application.csproj" />
   </ItemGroup>
 
 </Project>
