Added Application Layer initial Classes

--- a/LibraryService/src/LibraryService.Application/LibraryService.Application.csproj
+++ b/LibraryService/src/LibraryService.Application/LibraryService.Application.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\LibraryService.Domain\LibraryService.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
