--- a/LibraryService/src/LibraryService.Infastructure/LibraryService.Infastructure.csproj
+++ b/LibraryService/src/LibraryService.Infastructure/LibraryService.Infastructure.csproj
@@ -6,4 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Extensions\" />
+    <Folder Include="Context\" />
+    <Folder Include="Repositories\" />
+  </ItemGroup>
+
 </Project>
