Added Services with unimplemented interfaces to application layer

--- a/LibraryService/src/LibraryService.Application/LibraryService.Application.csproj
+++ b/LibraryService/src/LibraryService.Application/LibraryService.Application.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\LibraryService.Domain\LibraryService.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Mapper\" />
+  </ItemGroup>
+
 </Project>
