--- a/StudentService/src/StudentService.Application/StudentService.Application.csproj
+++ b/StudentService/src/StudentService.Application/StudentService.Application.csproj
@@ -6,4 +6,15 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Common\" />
+    <Folder Include="Interfaces\" />
+    <Folder Include="Models\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\StudentService.Domain\StudentService.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
