Added docker file and docker compose to student and identity services

--- a/IdentityService/IdentityService.csproj
+++ b/IdentityService/IdentityService.csproj
@@ -7,6 +7,7 @@
     <UserSecretsId>57fde141-dc4b-4ef7-80ce-b4fba923e0f5</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>.</DockerfileContext>
+    <DockerComposeProjectPath>docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
