--- a/StudentService/src/StudentService.Portal/appsettings.json
+++ b/StudentService/src/StudentService.Portal/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "server=db;port=3306;database=registrardb;userid=root;password=tiaspbiqe2r;"
+  }
 }
