--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -80,8 +80,7 @@ services:
     
       - "5200:80"
     volumes:
-      - ./ApiGateways/Web.Bff.Finance.PortalGateway/ocelot:/app/configuration
-      - ./ApiGateways/Web.Bff.Finance.PortalGateway/appsettings:/app
+      - ./ApiGateways/Web.Bff.Finance.PortalGateway:/app/configuration
   
   finance-gateway:
     environment:
@@ -91,8 +90,7 @@ services:
     ports:
       - "5201:80"
     volumes:
-      - ./ApiGateways/Web.Bff.Finance.PortalGateway/ocelot:/app/configuration
-      - ./ApiGateways/Web.Bff.Finance.PortalGateway/appsettings:/app
+      - ./ApiGateways/Web.Bff.Finance.PortalGateway:/app/configuration
 
   library-gateway:
     environment:
@@ -102,8 +100,7 @@ services:
     ports:
       - "5202:80"
     volumes:
-      - ./ApiGateways/Web.Bff.Finance.PortalGateway/ocelot:/app/configuration
-      - ./ApiGateways/Web.Bff.Finance.PortalGateway/appsettings:/app
+      - ./ApiGateways/Web.Bff.Finance.PortalGateway:/app/configuration
 volumes:
   databases:
     
