--- a/.gitignore
+++ b/.gitignore
@@ -366,3 +366,5 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+Services/Finance/tests/FinanceService.UnitTests/obj/Debug/net6.0/FinanceService.UnitTests.csproj.AssemblyReference.cache
+*.cache
