Fixed Test File Paths and Updated Project Dependencies

--- a/Services/Registrar/src/RegistrarService.Application/RegistrarService.Application.csproj
+++ b/Services/Registrar/src/RegistrarService.Application/RegistrarService.Application.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\StudentService.Domain\RegistrarService.Domain.csproj" />
+    <ProjectReference Include="..\RegistrarService.Domain\RegistrarService.Domain.csproj" />
   </ItemGroup>
 
 </Project>
