--- a/Services/Registrar/src/RegistrarService.Infastructure/RegistrarService.Infastructure.csproj
+++ b/Services/Registrar/src/RegistrarService.Infastructure/RegistrarService.Infastructure.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\StudentService.Application\RegistrarService.Application.csproj" />
+    <ProjectReference Include="..\RegistrarService.Application\RegistrarService.Application.csproj" />
   </ItemGroup>
 
 </Project>
