--- a/Services/Registrar/src/RegistrarService.Api/RegistrarService.Api.csproj
+++ b/Services/Registrar/src/RegistrarService.Api/RegistrarService.Api.csproj
@@ -21,8 +21,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\StudentService.Application\RegistrarService.Application.csproj" />
-    <ProjectReference Include="..\StudentService.Infastructure\RegistrarService.Infastructure.csproj" />
+    <ProjectReference Include="..\RegistrarService.Application\RegistrarService.Application.csproj" />
+    <ProjectReference Include="..\RegistrarService.Infastructure\RegistrarService.Infastructure.csproj" />
   </ItemGroup>
 
 </Project>
