Added Event Bus and RabbitMQ implementation
ToDo: Finish Regirstrar EventBus Handlers

--- a/Services/Registrar/src/RegistrarService.Api/RegistrarService.Api.csproj
+++ b/Services/Registrar/src/RegistrarService.Api/RegistrarService.Api.csproj
@@ -16,11 +16,12 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.2" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.6" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\BuildingBlocks\EventBus\EventBus\EventBus.csproj" />
     <ProjectReference Include="..\RegistrarService.Application\RegistrarService.Application.csproj" />
     <ProjectReference Include="..\RegistrarService.Infastructure\RegistrarService.Infastructure.csproj" />
   </ItemGroup>
