MAJOR CHANGE: Simplified Registrar Service
Removed unnecessary objects from domain class library (and references to those objects in other class libraries) to simplify the service.

To Do:
check that all infastructure, application, and api classes are functioning to reflect the change

--- a/.gitignore
+++ b/.gitignore
@@ -370,3 +370,4 @@ Services/Finance/tests/FinanceService.UnitTests/obj/Debug/net6.0/FinanceService.
 *.cache
 Services/Finance/tests/FinanceService.UnitTests/obj/Debug/net6.0/FinanceService.UnitTests.csproj.AssemblyReference.cache
 Services/Finance/tests/FinanceService.UnitTests/obj/Debug/net6.0/FinanceService.UnitTests.csproj.AssemblyReference.cache
+Services/Finance/tests/FinanceService.UnitTests/obj/Debug/net6.0/FinanceService.UnitTests.csproj.AssemblyReference.cache
