Update: Added mapping configuration tests - all passed
To Do:

Controller Unit Tests

Service Unit Tests

--- a/Services/Registrar/tests/RegistrarService.UnitTests/RegistrarService.UnitTests.csproj
+++ b/Services/Registrar/tests/RegistrarService.UnitTests/RegistrarService.UnitTests.csproj
@@ -22,4 +22,9 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\RegistrarService.Application\RegistrarService.Application.csproj" />
+    <ProjectReference Include="..\..\src\RegistrarService.Domain\RegistrarService.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
